--- a/src/lk/ijse/prabhash/view/UserForm.fxml
+++ b/src/lk/ijse/prabhash/view/UserForm.fxml
@@ -13,7 +13,7 @@
    <children>
       <Separator layoutX="61.0" layoutY="71.0" prefHeight="12.0" prefWidth="954.0" />
       <JFXTextField fx:id="txtUserId" focusColor="BLACK" labelFloat="true" layoutX="72.0" layoutY="124.0" prefHeight="40.0" prefWidth="205.0" promptText="User Id" unFocusColor="BLACK" />
-      <JFXTextField fx:id="txtName" focusColor="BLACK" labelFloat="true" layoutX="436.0" layoutY="124.0" onKeyReleased="#textFields_Key_Released" prefHeight="40.0" prefWidth="205.0" promptText="Name" unFocusColor="BLACK" />
+      <JFXTextField fx:id="txtName" focusColor="BLACK" labelFloat="true" layoutX="436.0" layoutY="124.0" prefHeight="40.0" prefWidth="205.0" promptText="Name" unFocusColor="BLACK" />
       <TableView fx:id="tblUser" layoutX="44.0" layoutY="335.0" prefHeight="334.0" prefWidth="1004.0">
          <columns>
             <TableColumn fx:id="colUserId" prefWidth="128.0" text="User Id" />
@@ -24,16 +24,16 @@
             <TableColumn fx:id="colPassword" minWidth="4.0" prefWidth="152.0" text="Password" />
          </columns>
       </TableView>
-      <JFXTextField fx:id="txtTelNo" focusColor="BLACK" labelFloat="true" layoutX="813.0" layoutY="124.0" onKeyReleased="#textFields_Key_Released" prefHeight="40.0" prefWidth="205.0" promptText="Tel No" unFocusColor="BLACK" />
+      <JFXTextField fx:id="txtTelNo" focusColor="BLACK" labelFloat="true" layoutX="813.0" layoutY="124.0" prefHeight="40.0" prefWidth="205.0" promptText="Tel No" unFocusColor="BLACK" />
       <JFXButton fx:id="btnSave" buttonType="RAISED" layoutX="672.0" layoutY="286.0" onAction="#btnSaveOnAction" prefHeight="40.0" prefWidth="139.0" style="-fx-background-color: #16FF00;" text="Save" />
-      <JFXTextField fx:id="txtEmail" focusColor="BLACK" labelFloat="true" layoutX="71.0" layoutY="214.0" onKeyReleased="#textFields_Key_Released" prefHeight="40.0" prefWidth="205.0" promptText="Email" unFocusColor="BLACK" />
-      <JFXTextField fx:id="txtUserName" focusColor="BLACK" labelFloat="true" layoutX="436.0" layoutY="214.0" onKeyReleased="#textFields_Key_Released" prefHeight="40.0" prefWidth="205.0" promptText="User Name" unFocusColor="BLACK" />
+      <JFXTextField fx:id="txtEmail" focusColor="BLACK" labelFloat="true" layoutX="71.0" layoutY="214.0" prefHeight="40.0" prefWidth="205.0" promptText="Email" unFocusColor="BLACK" />
+      <JFXTextField fx:id="txtUserName" focusColor="BLACK" labelFloat="true" layoutX="436.0" layoutY="214.0" prefHeight="40.0" prefWidth="205.0" promptText="User Name" unFocusColor="BLACK" />
       <Label layoutX="61.0" layoutY="27.0" prefHeight="53.0" prefWidth="387.0" text="User Management">
          <font>
             <Font name="System Bold" size="36.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="txtPassword" focusColor="BLACK" labelFloat="true" layoutX="813.0" layoutY="214.0" onKeyReleased="#textFields_Key_Released" prefHeight="40.0" prefWidth="205.0" promptText="Password" unFocusColor="BLACK" />
+      <JFXTextField fx:id="txtPassword" focusColor="BLACK" labelFloat="true" layoutX="813.0" layoutY="214.0" prefHeight="40.0" prefWidth="205.0" promptText="Password" unFocusColor="BLACK" />
       <JFXButton fx:id="btnNew" buttonType="RAISED" layoutX="879.0" layoutY="32.0" onAction="#btnNewOnAction" prefHeight="40.0" prefWidth="139.0" style="-fx-background-color: #3498db;" text="New +" />
       <JFXButton fx:id="btnDelete" buttonType="RAISED" layoutX="867.0" layoutY="286.0" onAction="#btnDeleteOnAction" prefHeight="40.0" prefWidth="139.0" style="-fx-background-color: #FB2576;" text="Delete" />
    </children>
